# gfxstream

./: .bazelrc  Android.bp  BUILD.bazel  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  build_variables.bzl  meson.build  meson_options.txt
common/base/: AlignedBuf_unittest.cpp  Android.bp  BUILD.bazel  CLog.cpp  CMakeLists.txt  CompressingStream.cpp  ContiguousRangeMapper_unittest.cpp  Debug.cpp  DecompressingStream.cpp  FileUtils_unittest.cpp  FunctorThread.cpp  GLObjectCounter.cpp  GraphicsObjectCounter.cpp  LayoutResolver.cpp  LayoutResolver_unittest.cpp  ManagedDescriptor_unittest.cpp  MemStream.cpp  MemoryTracker.cpp  NoDestructor_unittest.cpp  Optional_unittest.cpp  PathUtils.cpp  RingStreambuf.cpp  RingStreambuf_perf.cpp  RingStreambuf_unittest.cpp  ScopedFd_unittest.cpp  SharedMemory_posix.cpp  SharedMemory_unittest.cpp  SharedMemory_win32.cpp  StdioStream.cpp  Stream.cpp  StreamSerializing.cpp  StringParse_unittest.cpp  StringUtils.cpp  SubAllocator.cpp  System.cpp  Thread_pthread.cpp  Thread_win32.cpp  WorkerThread_unittest.cpp  meson.build  ring_buffer.cpp  (+1 more)
common/end2end/: Android.bp  BUILD.bazel  GfxstreamEnd2EndGlTests.cpp  GfxstreamEnd2EndTests.cpp  GfxstreamEnd2EndTests.h  GfxstreamEnd2EndVkTests.cpp  TestDataUtils.cpp
common/etc/: BUILD.bazel  meson.build
common/logging/: BUILD.bazel  CMakeLists.txt  logging.cpp  meson.build
common/utils/: Android.bp  BUILD.bazel  CMakeLists.txt  Strings.cpp  meson.build
guest/GLESv1/: Android.bp  BUILD.bazel
guest/GLESv1_enc/: Android.bp  BUILD.bazel  gl_client_context.cpp  gl_client_context.h  gl_client_proc.h  gl_enc.cpp  gl_enc.h  gl_entry.cpp  gl_ftable.h  gl_opcodes.h
guest/GLESv2/: Android.bp  BUILD.bazel
guest/GLESv2_enc/: Android.bp  BUILD.bazel  GL2Encoder.cpp  gl2_client_context.cpp  gl2_client_context.h  gl2_client_proc.h  gl2_enc.cpp  gl2_enc.h  gl2_entry.cpp  gl2_ftable.h  gl2_opcodes.h
guest/OpenglCodecCommon/: Android.bp  BUILD.bazel  EncoderDebug.cpp  GLESTextureUtils.cpp
guest/OpenglSystemCommon/: Android.bp  BUILD.bazel  HostConnection.cpp  ProcessPipe.cpp  VirtioGpuPipeStream.cpp
guest/egl/: Android.bp  BUILD.bazel  egl.cpp  eglDisplay.cpp
guest/rendercontrol/: Android.bp  BUILD.bazel
host/: Android.bp  BUILD.bazel  Buffer.cpp  Buffer.h  CMakeLists.txt  ChannelStream.cpp  ChannelStream.h  ColorBuffer.cpp  ColorBuffer.h  Compositor.h  DisplaySurface.cpp  DisplaySurfaceUser.cpp  ExternalObjectManager.h  FrameBuffer.cpp  FrameBuffer.h  FrameBuffer_unittest.cpp  GfxStreamAgents.cpp  GraphicsDriverLock.cpp  NativeSubWindow_x11.cpp  PostCommands.h  PostWorker.cpp  PostWorker.h  PostWorkerGl.cpp  PostWorkerGl.h  ProcessResources.h  ReadBuffer.cpp  ReadBuffer.h  RenderChannelImpl.cpp  RenderChannelImpl.h  RenderControl.cpp  RenderLibImpl.cpp  RenderLibImpl.h  RenderThread.cpp  RenderThread.h  RenderThreadInfo.cpp  RenderThreadInfo.h  RenderThreadInfoGl.cpp  RenderWindow.cpp  RenderWindow.h  RendererImpl.cpp  (+27 more)
host/address_space/: Android.bp  BUILD.bazel  CMakeLists.txt  address_space_device.cpp  address_space_graphics.cpp  address_space_graphics_unittests.cpp  meson.build  ring_buffer.cpp  ring_buffer_unittest.cpp
host/apigen-codec-common/: Android.bp  BUILD.bazel  CMakeLists.txt  ChecksumCalculator.cpp  ChecksumCalculatorThreadInfo.cpp  ProtocolUtils.h  X11Support.cpp  X11Support.h  glUtils.cpp  meson.build
host/backend/: Android.bp  BUILD.bazel  CMakeLists.txt  address_space_operations.cpp  display_operations.cpp  display_surface.cpp  display_surface_user.cpp  dma_device.cpp  external_object_manager.cpp  graphics_driver_lock.cpp  guest_operations.cpp  mem_stream.cpp  meson.build  renderer_operations.cpp  stream_utils.cpp  sync_device.cpp  vm_operations.cpp  window_operations.cpp
host/compressedTextureFormats/: CMakeLists.txt
host/compressed_textures/: Android.bp  AstcCpuDecompressorImpl.cpp  AstcCpuDecompressorNoOp.cpp  AstcCpuDecompressor_unittest.cpp  BUILD.bazel  CMakeLists.txt  meson.build
host/decoder_common/: Android.bp  BUILD.bazel  CMakeLists.txt  ChecksumCalculatorThreadInfo.cpp  X11Support.cpp  glUtils.cpp  meson.build
host/features/: Android.bp  BUILD.bazel  CMakeLists.txt  meson.build
host/gl/: Android.bp  BUILD.bazel  BufferGl.cpp  BufferGl.h  CMakeLists.txt  ColorBufferGl.cpp  ColorBufferGl.h  CompositorGl.cpp  CompositorGl.h  DebugGl.h  DisplayGl.cpp  DisplayGl.h  DisplaySurfaceGl.cpp  DisplaySurfaceGl.h  EmulatedEglConfig.cpp  EmulatedEglConfig.h  EmulatedEglContext.cpp  EmulatedEglContext.h  EmulatedEglFenceSync.cpp  EmulatedEglFenceSync.h  EmulatedEglImage.cpp  EmulatedEglWindowSurface.cpp  EmulatedEglWindowSurface.h  EmulationGl.cpp  EmulationGl.h  GLESVersionDetector.cpp  ReadbackWorkerGl.cpp  ReadbackWorkerGl.h  RenderThreadInfoGl.cpp  RenderThreadInfoGl.h  TextureDraw.cpp  TextureDraw.h  TextureResize.cpp  YUVConverter.cpp  meson.build
host/health/: Android.bp  BUILD.bazel  CMakeLists.txt  HealthMonitor.cpp  HealthMonitor_unittest.cpp  meson.build
host/iostream/: Android.bp  BUILD.bazel  CMakeLists.txt  meson.build
host/logging/: Android.bp  BUILD.bazel  CMakeLists.txt  logging.cpp  meson.build
host/metrics/: Android.bp  BUILD.bazel  CMakeLists.txt  Metrics.cpp  meson.build
host/renderControl_dec/: Android.bp  BUILD.bazel  CMakeLists.txt  meson.build  renderControl_dec.cpp  renderControl_dec.h  renderControl_server_context.cpp  renderControl_server_context.h  renderControl_server_proc.h  renderControl_types.h
host/renderdoc/: Android.bp  BUILD.bazel  CMakeLists.txt  RenderDoc_unittest.cpp  meson.build
host/snapshot/: Android.bp  BUILD.bazel  CMakeLists.txt  meson.build
host/testlibs/: Android.bp  CMakeLists.txt  OSWindow.cpp
host/tests/: BUILD.bazel  CompositorVk_unittest.cpp  DefaultFramebufferBlit_unittest.cpp  DisplayVk_unittest.cpp  FrameBuffer_unittest.cpp  GLES1Dispatch_unittest.cpp  GLSnapshotBuffers_unittest.cpp  GLSnapshotFramebufferControl_unittest.cpp  GLSnapshotFramebuffers_unittest.cpp  GLSnapshotMultisampling_unittest.cpp  GLSnapshotPixels_unittest.cpp  (+28 more)
utils/: Android.bp  BUILD.bazel  CMakeLists.txt  RenderDoc_unittest.cpp
(+515 files in other folders)
