load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_visibility = ["//:gfxstream"],
)

cc_library(
    name = "gfxstream_utils_headers",
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
    deps = [
        "//common/vulkan:gfxstream_vulkan_headers",
        "//host/library:gfxstream_host_library",
        "//host/logging:gfxstream_host_logging",
        "//third-party/renderdoc",
    ],
)

cc_library(
    name = "gfxstream_utils",
    srcs = ["GfxApiLogger.cpp"],
    copts = ["-fno-exceptions"],
    deps = [":gfxstream_utils_headers"],
)

cc_test(
    name = "gfxstream_utils_unittests",
    srcs = [
        "GfxApiLogger_unittest.cpp",
        "RenderDoc_unittest.cpp",
    ],
    deps = [
        ":gfxstream_utils",
        "@com_google_googletest//:gtest_main",
    ],
)
