load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//:gfxstream"],
)

cc_library(
    name = "gfxstream_etc_headers",
    hdrs = glob([
        "include/**/*.h",
    ]),
    includes = ["include"],
)

cc_library(
    name = "gfxstream_etc",
    srcs = ["etc.cpp"],
    copts = ["-fno-exceptions"],
    deps = [":gfxstream_etc_headers"],
)
