load("@rules_cc//cc:defs.bzl", "cc_library", "cc_shared_library")

package(
    default_visibility = ["//:gfxstream"],
)

cc_library(
    name = "gfxstream_guest_egl_headers",
    hdrs = glob([
        "**/*.h",
        "**/*.in",
    ]),
    includes = [
        ".",
    ],
)

cc_library(
    name = "gfxstream_guest_egl_impl",
    srcs = [
        "ClientAPIExts.cpp",
        "egl.cpp",
        "eglDisplay.cpp",
    ],
    linkopts = [
        # FIXME: gl2_entry.cpp is included in both the encoder and the full library...
        "-z muldefs",
    ],
    deps = [
        ":gfxstream_guest_egl_headers",
        "//common/logging:gfxstream_common_logging",
        "//guest/OpenglCodecCommon:gfxstream_guest_openglcodeccommon",
        "//guest/OpenglSystemCommon:gfxstream_guest_openglsystemcommon",
    ],
)

cc_shared_library(
    name = "gfxstream_guest_egl",
    shared_lib_name = "libEGL_emulation.so",
    deps = [
        ":gfxstream_guest_egl_impl",
    ],
)
